# qbot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  package-lock.json  package.json  skills-lock.json
.github/workflows/: deploy.yml  test.yml
.superpowers/sdd/: final-review-fix-report.md  gate1-task-1-report.md  gate1-task-2-report.md  gate1-task-3-report.md  gate1-task-5-report.md  gate2-phase-claimgraph-facts-only-report.md  gate2-task-4-report.md  gate2-task-5-report.md  gate2-task-6-report.md  gate2-task-8-report.md  gate2-task-9-fix1-report.md  gate2-task-9-fix2-report.md  gate2-task-9-fix3-report.md  gate2-task-9-report.md  gate3-phase-fix1-report.md  gate3-phase-fix2-report.md  gate3-phase-fix3-report.md  gate3-phase-fix4-report.md  gate3-phase-fix5-report.md  gate3-task-1-report.md  gate3-task-2-fix1-report.md  gate3-task-2-fix2-report.md  gate3-task-3-report.md  gate3-task-5-fix1-report.md  gate3-task-5-fix2-report.md  gate3-task-5-fix3-report.md  gate3-task-5-fix4-report.md  gate3-task-5-report.md  gate3-task-6-report.md  gate3-task-7-report.md  gate3-task-8-report.md  gate4-task-1-fix1-report.md  gate4-task-1-report.md  gate4-task-10-report.md  gate4-task-4-report.md  gate4-task-8-report.md  gate4-task-9-report.md  historical-chip-task-2-report.md  progress.md  task-4-report.md  (+3 more)
deploy/: docker-compose.yml  nginx-syntax.conf  qbot-dashboard-acme.nginx.conf  qbot-dashboard.nginx.conf  qbot-research.service  qbot-research.timer  qbot.service  setup.sh
docs/parity/: qubot-stock-parity.md
docs/plans/: 2026-03-03-qbot-design.md  2026-03-03-qbot-implementation.md  2026-03-05-local-testing-design.md  2026-03-05-local-testing.md  CLAUDE.md  (+3 more)
examples/: dashboard_password_hash.rs
migrations/: 001_stock_daily_bars.sql  002_scan_results.sql  003_limit_up.sql  004_sector_daily.sql  005_chip_distribution.sql  006_portfolio.sql  007_watchlist.sql  008_simulators.sql  009_reports.sql  010_startup_watchlist.sql  011_signal_auto_trading.sql  012_daily_signal_scan_results.sql  013_point_in_time_market_data.sql  014_pattern_research_and_shadow.sql  015_event_evidence_mvp.sql  016_event_evolution.sql  017_decision_support.sql  018_adaptive_signal_training.sql  019_scan_runs.sql  020_company_intelligence.sql  021_company_intelligence_hardening.sql  022_preserve_company_dividend_versions.sql  023_windowed_company_checkpoint_leases.sql  024_expand_company_checkpoints.sql  025_historical_chip_intelligence.sql  026_bound_chip_readiness.sql  CLAUDE.md
prisma/: schema.prisma
research/: pyproject.toml
research/qbot_research/: __init__.py  archetypes.py  baselines.py  cli.py  contracts.py  controls.py  datasets.py  export.py  labels.py  validation.py
research/tests/: test_archetypes.py  test_baselines.py  test_contracts.py  test_controls.py  test_datasets.py  test_export.py  test_labels.py  test_validation.py
scripts/: local-test.sh  setup-webhook.js
src/: CLAUDE.md  config.js  config.rs  error.rs  index.js  main.rs  market_time.rs  state.rs
(+181 files in other folders)
