[package]
name = "qbot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qbot"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "uuid", "json", "migrate"] }
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-cron-scheduler = { version = "0.10", features = ["signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
uuid = { version = "=1.11.0", features = ["v4", "serde"] }
async-trait = "0.1"
tempfile = "=3.10.1"

[dev-dependencies]
tokio-test = "0.4"


