[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbot-research"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.2,<2",
  "numpy>=2,<3",
  "polars>=1.20,<2",
  "pyarrow>=18,<20",
  "pydantic>=2.10,<3",
  "psycopg[binary]>=3.2,<4",
  "scikit-learn>=1.6,<2",
  "scipy>=1.15,<2",
  "typer>=0.15,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
qbot-research = "qbot_research.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.setuptools.packages.find]
include = ["qbot_research*"]
